--- a/index.html
+++ b/index.html
@@ -50,10 +50,15 @@
           </div>
           <div class="portfolio-grid">
             <div class="portfolio-item">
-                <h3>Mixed Messages</h3>
+                <h3>Jammming</h3>
+                <p>React Spotify playlist creator.</p>
+                <a href="https://main--jammming-live.netlify.app/" target="_blank">
+                <button class="btn-blue">Visit Site</button>
+              </a>
             </div>
+         
             <div class="portfolio-item">
-                <h3>Portfolio Item 2</h3>
+                <h3>Mixed Messages</h3>
             </div>
             <div class="portfolio-item">
                 <h3>Portfolio Item 3</h3>
